--- a/settings.gradle
+++ b/settings.gradle
@@ -10,27 +10,13 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url 'https://jitpack.io'
-        }
-        maven {
-            url 'https://android-sdk.is.com/'
-        }
-        maven {
-            url 'https://unity3ddist.jfrog.io/artifactory/unity-mediation-mvn-prod-local/'
-        }
-        maven {
-            url 'https://artifact.bytedance.com/repository/pangle'
-        }
-        maven {
-            url 'https://cboost.jfrog.io/artifactory/chartboost-ads/'
-        }
-        maven {
-            url 'https://sdk.tapjoy.com/'
-        }
-        maven {
-            url 'https://maven.wortise.com/artifactory/public'
-        }
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://android-sdk.is.com/' }
+        maven { url 'https://unity3ddist.jfrog.io/artifactory/unity-mediation-mvn-prod-local/' }
+        maven { url 'https://artifact.bytedance.com/repository/pangle' }
+        maven { url 'https://cboost.jfrog.io/artifactory/chartboost-ads/' }
+        maven { url 'https://sdk.tapjoy.com/' }
+        maven { url 'https://maven.wortise.com/artifactory/public' }
     }
 }
 rootProject.name = "ads-sdk"
