--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,7 @@ dependencyResolutionManagement {
         maven { url 'https://artifact.bytedance.com/repository/pangle' }
         maven { url 'https://cboost.jfrog.io/artifactory/chartboost-ads/' }
         maven { url 'https://sdk.tapjoy.com/' }
+        maven { url 'https://maven.ogury.co' }
         maven { url 'https://maven.wortise.com/artifactory/public' }
     }
 }
