--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,8 @@ dependencyResolutionManagement {
         maven { url 'https://android-sdk.is.com/' }
         maven { url 'https://unity3ddist.jfrog.io/artifactory/unity-mediation-mvn-prod-local/' }
         maven { url 'https://artifact.bytedance.com/repository/pangle' }
+        maven { url 'https://cboost.jfrog.io/artifactory/chartboost-ads/' }
+        maven { url 'https://maven.ogury.co' }
         maven { url 'https://maven.wortise.com/artifactory/public' }
     }
 }
