--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -45,13 +45,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-process:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.7.0'
-    implementation platform('com.squareup.retrofit2:retrofit-bom:2.11.0')
+    implementation platform("com.squareup.retrofit2:retrofit-bom:2.11.0")
     implementation 'com.squareup.retrofit2:retrofit'
     implementation 'com.squareup.retrofit2:converter-gson'
-    implementation platform('com.squareup.okhttp3:okhttp-bom:4.12.0')
+    implementation platform("com.squareup.okhttp3:okhttp-bom:4.12.0")
     implementation 'com.squareup.okhttp3:okhttp'
     implementation 'com.squareup.okhttp3:logging-interceptor'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.0")
     implementation project(':library')
 }
